<resources>
    <string name="app_name">Covid</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="lista_enfermeiro_fragment_label">Enfermeiro</string>
    <string name="novo_enfermeiro_fragment_label">Novo enfermeiro</string>
    <string name="edita_enfermeiro_fragment_label">Editar enfermeiro</string>
    <string name="elimina_enfermeiro_fragment_label">Eliminar enfermeiro?</string>

    <string name="lista_cuidados_fragment_label">Cuidados</string>
    <string name="novo_cuidado_fragment_label">Novo Cuidado</string>
    <string name="edita_cuidado_fragment_label">Edita Cuidado</string>
    <string name="elimina_cuidado_fragment_label">Eliminar Cuidado?</string>


    <string name="novo_enfermeiro">Novo enfermeiro</string>
    <string name="alterar_enfermeiro">Alterar enfermeiro</string>
    <string name="eliminar_enfermeiro">Eliminar enfermeiro</string>

    <string name="novo_cuidado">Novo Cuidado</string>
    <string name="alterar_cuidado">Alterar Cuidado</string>
    <string name="eliminar_cuidado">Eliminar Cuidado</string>

    <string name="nome_utente">Nome</string>
    <string name="novo_utente">Novo Utente</string>
    <string name="alterar_utente">Alterar Utente</string>
    <string name="eliminar_utente">Eliminar Utente</string>

    <string name="nome_enfermeiro">Nome</string>
    <string name="data_de_nascimento">Idade</string>
    <string name="sexo">Sexo</string>

    <string name="nome_cuidado">Cuidado</string>
    <string name="camasOcupadas">Camas Ocupadas</string>
    <string name="camasDisponiveis">Camas Disponiveis</string>
    <string name="erro_inserir_nome_cuidado">Erro ao inserir nome de cuidado</string>
    <string name="cuidado_guardado_sucesso">Cuidado guardado com sucesso</string>
    <string name="erro_eliminar_cuidado">Erro ao eliminar cuidado</string>
    <string name="cuidado_eliminado_sucesso">Cuidado eliminado com sucesso</string>

    <string name="erro_inserir_utente">Erro ao inserir utente</string>
    <string name="utente_guardado_sucesso">Utente guardado com sucesso</string>
    <string name="erro_eliminar_utente">Erro ao eliminar utente</string>
    <string name="utente_eliminado_sucesso">Utente eliminado com sucesso</string>

    <string name="servicoInternamento">Servico de internamento</string>
    <string name="enfermeiroResponsavel">Enfermeiro responsavel</string>

    <string name="guardar">Guardar</string>
    <string name="cancelar">Cancelar</string>
    <string name="versao">Enfermeiros v. 1.0</string>
    <string name="idade">Idade</string>

    <string name="preencha_campo">Por preencher</string>
    <string name="erro_alterar_cuidados">Erro ao alterar cuidados</string>

    <string name="preencha_nome">Preencha o nome</string>
    <string name="preencha_idade">Preencha a idade</string>
    <string name="preencha_sexo">Preencha o sexo</string>
    <string name="erro_inserir_enfermeiro">Erro ao inserir enfermeiro</string>
    <string name="erro_alterar_enfermeiro">Erro ao alterar enfermeiro</string>
    <string name="enfermeiro_guardado_sucesso">Enfermeiro guardado com sucesso</string>
    <string name="erro_eliminar_enfermeiro">Erro ao eliminar enfermeiro</string>
    <string name="enfermeiro_eliminado_sucesso">Enfermeiro eliminado com sucesso</string>
    <string name="enfermeiros">Enfermeiros</string>
    <string name="cuidados">Cuidados</string>
    <string name="utentes">Utentes</string>
    <string name="selecionar_cuidado">Selecionar serviço de internamento:</string>
    <string name="textview">TextView</string>
    <string name="selecionar_enfermeiro_respons_vel">Selecionar enfermeiro responsável:</string>
</resources>