<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/buttonListaEnfermeiro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:layout_marginBottom="10dp"
        android:onClick="navegaListaEnfermeiro"
        android:text="@string/enfermeiros" />

    <Button
        android:id="@+id/buttonListaCuidados"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:onClick="navegaListaCuidados"
        android:text="@string/cuidados" />

    <Button
        android:id="@+id/buttonListaUtentes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="navegaListaUtentes"
        android:text="@string/utentes" />
</LinearLayout>