<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/ListaEnfermeiroFragment">

    <fragment
        android:id="@+id/ListaEnfermeiroFragment"
        android:name="pt.ipg.covid.ListaEnfermeiroFragment"
        android:label="@string/lista_enfermeiro_fragment_label"
        tools:layout="@layout/fragment_lista_enfermeiro">

        <action
            android:id="@+id/action_ListaEnfermeiroFragment_to_NovoEnfermeiroFragment"
            app:destination="@id/NovoEnfermeiroFragment" />
        <action
            android:id="@+id/action_ListaEnfermeiroFragment_to_eliminaEnfermeiroFragment"
            app:destination="@id/eliminaEnfermeiroFragment" />
    </fragment>
    <fragment
        android:id="@+id/NovoEnfermeiroFragment"
        android:name="pt.ipg.covid.NovoEnfermeiroFragment"
        android:label="@string/novo_enfermeiro_fragment_label"
        tools:layout="@layout/fragment_novo_enfermeiro">

        <action
            android:id="@+id/action_cancelar_edita_enfermeiroFragment_to_ListaEnfermeiroFragment"
            app:destination="@id/ListaEnfermeiroFragment" />
    </fragment>
    <fragment
        android:id="@+id/eliminaEnfermeiroFragment"
        android:name="pt.ipg.covid.EliminaEnfermeiroFragment"
        android:label="@string/elimina_enfermeiro_fragment_label"
        tools:layout="@layout/fragment_elimina_enfermeiro" >
        <action
            android:id="@+id/action_eliminaEnfermeiroFragment_to_listaEnfermeiroFragment"

            app:destination="@id/ListaEnfermeiroFragment" />
    </fragment>
</navigation>